@startuml GradesServer
entity Course{
    id: number
    --
    groups: Group[]
}

entity Group{
    id: number
    --
    subjects: Subject[]
    students: Student[]
    grades: Grade[]
}

entity Subject{
    id: number
    --
    name: string
    type: string
}

entity Student{
    id: number
    --
    name: string
}

entity Grade{
    id: number
    --
    subjectId: number
    studentId: number
    gradeValue: number
}

Group }o--|| Course
Student }o--|| Group
Subject }o--|| Group
Grade }o--|| Group
@enduml